add start of conversion to LLVM 3.7

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,8 +16,8 @@ message(STATUS ${Z3_INC})
 add_definitions(${LLVM_DEFINITIONS} -std=c++11 -Wall -g -fno-rtti)
 include_directories(${LLVM_INCLUDE_DIRS} ${Z3_INC})
 
-add_subdirectory(ContextInsenAA)
-add_subdirectory(ContextInsenPDG)
+#add_subdirectory(ContextInsenAA)
+#add_subdirectory(ContextInsenPDG)
 add_subdirectory(ContextInsenDynPDG)
 add_subdirectory(ValDBToDot)
 #add_subdirectory(DynSliceSelect)
